# portfolio_monorepo

./: .gitignore  readme.md
courses/CS50W/search/: advanced.html  images.html  index.html  styles-adv.css  styles.css
courses/CS50X/birthdays/: app.py
courses/CS50X/bulbs/: bulbs.c
courses/CS50X/caesar/: caesar.c
courses/CS50X/credit/: credit.c
courses/CS50X/daniel/: creditd.c
courses/CS50X/debug/: debug.c
courses/CS50X/dna/: dna.py
courses/CS50X/dna 2/: dna.py
courses/CS50X/fiftyville/: log.sql
courses/CS50X/filter-less/: helpers.c
courses/CS50X/finance/: app.py
courses/CS50X/finance_git/: SQL_TEST.sql  app.py  helpers.py
courses/CS50X/half/: half  half.c
courses/CS50X/hello/: hello  hello.c
courses/CS50X/homepage/: cv.html  hobbies.html  index.html  pet.html  (+3 more)
learning/game-shop/: shop.ts
learning/mini-task/: .gitignore  README.md  package.json  task.md  taskManager.ts
learning/word-chain/: game.ts  play.ts
projects/MVP_RAG/: .env.example  .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json
projects/gutscheineland/: .env.example  .gitignore  PROJECT_DOCS.md  e2e-data.json  eslint.config.mjs  next-sitemap.config.cjs  next.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.mjs  vitest.config.ts
projects/pisignage/: .gitignore  helpers.py  upload_to_signage.py
scripts_and_automation/: check_invoices.py
scripts_and_automation/barcode_generator/: README.md  barcodes.py
scripts_and_automation/kasse/: bar_re.py  cws.py  pm.py  pyproject.toml  requirements.txt  vendon.py
(+297 files in other folders)
