[project]
name = "kasse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4==4.13.4",
    "cffi==1.17.1",
    "charset-normalizer==3.4.2",
    "cryptography==45.0.4",
    "et-xmlfile==2.0.0",
    "greenlet==3.2.3",
    "numpy==2.3.0",
    "openpyxl==3.1.5",
    "pandas==2.3.0",
    "pdfminer-six==20250506",
    "pdfplumber==0.11.7",
    "pillow==11.2.1",
    "playwright==1.52.0",
    "pycparser==2.22",
    "pyee==13.0.0",
    "pypdfium2==4.30.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "six==1.17.0",
    "soupsieve==2.7",
    "typing-extensions==4.14.0",
    "tzdata==2025.2",
]
